--- a/dl/web_default.html
+++ b/dl/web_default.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<!--
+  This web page is the default web page for Apache on Debian 8 x64 installed by servx
+  
+  Create by Edouard CONNOR for AH26
+-->
+<html>
+  <head>
+    <title>Welcome on you web server</title>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <img href="" alt="AH26" />
+    <br />
+    <h2><center>Welcome on your web server !</center></h2>
+    <h3><center>This is the default web page on your web server. To add content, please replace the "index.html" on your web site directory.</center></h3>
+  </body>
+</html>
