--- a/dl/web_default.html
+++ b/dl/web_default.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <img href="" alt="AH26" />
+    <img href="https://raw.githubusercontent.com/AH26Network/servx/master/dl/LOGO%20AH26%20-%20Full.png" alt="AH26" width="200" />
     <br />
     <h2><center>Welcome on your web server !</center></h2>
     <h3><center>This is the default web page on your web server. To add content, please replace the "index.html" on your web site directory.</center></h3>
