--- a/dl/web_default.html
+++ b/dl/web_default.html
@@ -8,9 +8,10 @@
   <head>
     <title>Welcome on you web server</title>
     <meta charset="UTF-8" />
+    <link rel="icon" src="https://raw.githubusercontent.com/AH26Network/servx/master/dl/favicon_AH26.ico" />
   </head>
   <body>
-    <center><img src="logo_ah26.png" alt="AH26" width="200"/></center>
+    <center><img src="https://raw.githubusercontent.com/AH26Network/servx/master/dl/LOGO%20AH26%20-%20Full.png" alt="AH26" width="200"/></center>
     <br />
     <h2><center>Welcome on your web server !</center></h2>
     <h3><center>This is the default web page on your web server. To add content, please replace the "index.html" on your web site directory.</center></h3>
